--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "easymde": "^2.20.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
-    "katex": "^0.16.21",
+    "katex": "^0.16.22",
     "marked": "^15.0.7",
     "marked-katex-extension": "^5.1.4",
     "next": "^15.2.1",
@@ -35,8 +35,12 @@
     "react-simplemde-editor": "^5.2.0",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "sass": "^1.85.1"
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
+    "sass": "^1.85.1",
+    "unified": "^11.0.5"
   }
 }
